Build Version Update and UI Alignment Issue Fixes

--- a/src/app/pcdc-header/pcdc-header.component.scss
+++ b/src/app/pcdc-header/pcdc-header.component.scss
@@ -10,7 +10,7 @@
 .header-native-toolbar {
     text-align: end;
     padding: 0;
-    padding-top: 48px;
+    margin-top: 36px;
 }
 .margin_icon {
     margin: 10px;
