--- a/src/global.scss
+++ b/src/global.scss
@@ -318,7 +318,7 @@ ion-loading {
   --padding-start:0;
   --box-shadow: none;
   --border-radius: 0;
-  margin: 0;
+  margin: 4px 0 0 0;
 }
 .font_open_sans{
   font-family: 'Open Sans';
